kubernetes/platform/development/forgejo/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.vzkn.eu/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: development
spec:
  hostnames:
    - git.vzkn.eu
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: forgejo-anubis
          namespace: development
          port: 8080
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Real-Ip
                value: "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
      timeouts:
        request: 300s
---
# yaml-language-server: $schema=https://schemas.vzkn.eu/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo-redirect
spec:
  hostnames:
    - forgejo.vzkn.eu
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            hostname: git.vzkn.eu
            statusCode: 301
